# iwz_download

./: Cargo.toml  build.rs
src/: config.rs  downloader.rs  main.rs  task.rs  utils.rs
src/extensions/: checksum.rs  mod.rs  speed_limit.rs
